# ml-wiki

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  docusaurus.config.js  package-lock.json  package.json  pyproject.toml  zensical.toml
.github/: CONTRIBUTING.md
.github/actions/build-docs/: action.yml
.github/workflows/: workflow.yml
blog/: tags.yml
config/: docusaurus.config.js  tsconfig.json
docs/: index.md  intro.md
docs/artificial_intelligence/deep_learning/: computer_vision.md  deep-multi-task-meta-learning.md  deep_learning.md  generative_ai.md  graph_neural_networks.md
docs/artificial_intelligence/machine_learning/: machine_learning.md  (+1 more)
docs/capt_1_operative_systems/: topic_1_linux.md
docs/capt_2_tools/: topic_1_git.md
docs/capt_A_interviews/: _category_.json  cv_guide.md  deep_learning_questions.md
docs/css/: custom.css
docs/domain_specific/: Redes y servicios de telecomunicaciones.md  introduction_to_telecommunications.md
docs/interviews/: cv_guide.md  deep_learning_questions.md
docs/not_ready_docs/: Ciencias de Datos en Python.md  DVC.md  Deep Learning cookbook.md  MLOps-zoomcap.md  Machine Learning con Scikit Learn.md  Numba.md  Software Engineering for Data Scientist.md  ml_ops.md  otros.md  python_production.md  system_design_basics.md
docs/operative_systems/: linux.md
docs/programming/: bash.md  makefile.md  python.md
docs/stylesheets/: extra.css
docs/tools/: git.md  makefile.md  python-environments.md  python_environments.md
not_ready_docs/capt_4_artificial_intelligence/: _category_.json
src/css/: custom.css
(+93 files in other folders)
