[project]
name = "ml-wiki"
version = "0.1.1"
description = "Add your description here"
authors = [
    {name = "Daniel Bazo Correa", email = "none@none.com"},
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "License :: OSI Approved :: MIT License",
]
keywords = ["ml-wiki"]
dependencies = [
    "zensical==0.0.20",
]

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { git = { commit = true } }]
environments = [
    "sys_platform == 'linux'",
]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'"
]
